sfdx/sfdxtest1/force-app/main/default/objects/EstimateInfo__c/EstimateInfo__c.object-meta.xml
<CustomObject>
    <label>見積情報</label>
    <nameField>
        <label>見積情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>