sfdx/sfdxtest1/force-app/main/default/objects/EstimateInfo__c/fields/Approvar2__c.field-meta.xml
<CustomField>
    <fullName>Approvar2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者（部長）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvar2</relationshipName>
    <type>Lookup</type>
</CustomField>