sfdx/sfdxtest1/force-app/main/default/objects/EstimateInfo__c/fields/CopyPriceList__c.field-meta.xml
<CustomField>
    <fullName>CopyPriceList__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>'On'にして保存すると、価格表の金額を明細にコピーします。（コピー後、チェックは'Off'に戻します）</inlineHelpText>
    <label>金額をコピーする</label>
    <type>Checkbox</type>
</CustomField>