sfdx/sfdxtest1/force-app/main/default/objects/EstimateInfo__c/fields/EstimateTo__c.field-meta.xml
<CustomField>
    <fullName>EstimateTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>見積提示先</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>見積情報</relationshipLabel>
    <relationshipName>EstimateTo</relationshipName>
    <type>Lookup</type>
</CustomField>