sfdx/sfdxtest1/force-app/main/default/objects/EstimateInfo__c/fields/NumOfLevel__c.field-meta.xml
<CustomField>
    <fullName>NumOfLevel__c</fullName>
    <label>承認レベル番号</label>
    <summarizedField>EstimateDetail__c.NumOfApproval__c</summarizedField>
    <summaryForeignKey>EstimateDetail__c.Parent__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>