sfdx/sfdxtest1/force-app/main/default/objects/EstimateInfo__c/validationRules/Approvar_Director.validationRule-meta.xml
<ValidationRule>
    <fullName>Approvar_Director</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NumOfLevel__c >= 30,  ISBLANK( Approvar2__c ))</errorConditionFormula>
    <errorDisplayField>Approvar2__c</errorDisplayField>
    <errorMessage>部長を選択してください。</errorMessage>
</ValidationRule>