sfdx/sfdxtest1/force-app/main/default/objects/EstimateInfo__c/validationRules/Approvar_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Approvar_Manager</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NumOfLevel__c >= 20,  ISBLANK( Approvar1__c ) )</errorConditionFormula>
    <errorDisplayField>Approvar1__c</errorDisplayField>
    <errorMessage>課長を選択してください。</errorMessage>
</ValidationRule>